rust/examples/intro/small_integers_unfit_in_i8.out
error: literal out of range for `i8`
 --> examples/intro/small_integers_unfit_in_i8.rs:2:17
  |
2 |     let x: i8 = 200;
  |                 ^^^
  |
  = note: the literal `200` does not fit into the type `i8` whose range is `-128..=127`
  = help: consider using the type `u8` instead
  = note: `#[deny(overflowing_literals)]` on by default

error: aborting due to previous error

