rust/examples/intro/small_integers_unfit_in_i8.rs
fn main() {
    let x: i8 = 200;
    println!("{x}");
}


